--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
- "scripts": {
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -28,14 +28,22 @@
     ]
   },
   "jest": {
-      "coverageThreshold": {
-        "global": {
-          "branches": 60,
-          "functions": 60,
-          "lines": 60,
-          "statements": 60
-        }
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
       }
+    }
   },
-  "homepage": "https://korzhonrails/github.io/itera_travis_workshop"
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test:coverage -- --watch-all=false"
+    }
+  },
+  "homepage": "https://korzhonrails/github.io/itera_travis_workshop",
+  "devDependencies": {
+    "husky": "^2.4.1"
+  }
 }
